--- a/app/views/recipes/about.html.erb
+++ b/app/views/recipes/about.html.erb
@@ -3,6 +3,6 @@
 These recipes were originally prepared using an IBM Personal Computer. The recipes were written using the program PFS:FILE. The original booklet was prepared using EASYWRITER. Anyone with access to an IBM PC and the program PFS:FILE is welcome to a copy of the recipe file.
 </p>
 <p class="about-text" align="center">
-The booklet has been converted to a Ruby on Rails application with a MariaDb backend database being served by Nginx web server running on CentOS 7. The source code is available on github.
+The booklet has been converted to a Ruby on Rails application with a MariaDb backend database being served by Nginx web server running on CentOS 7. The source code is available on <a href="https://github.com/logie4000/billsgalley">github</a>.
 </p>
 </div>
