--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,3 +1,5 @@
+<p id="notice"><%= notice %></p>
+
 <h1>Welcome to Bill's Galley<% if (user = session[:user_id] && User.find_by_id(session[:user_id])) %>
     <%= ", #{user.first_name} #{user.last_name}" %>
     </h1>
