--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -4,6 +4,7 @@
       <h2><%= pluralize(obj.errors.count, "error") %> prohibited this record from being saved:</h2>
       <ul>
       <% obj.errors.full_messages.each do |msg| %>
+        <% Rails.logger.debug "ERROR reported: #{msg}" %>
         <li><%= msg %></li>
       <% end %>
       </ul>
