--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,7 +10,7 @@
 <p><strong>Last Name</strong><br>
 <%= f.text_field :last_name %></p>
 
-<% if (@current_user.isAdmin && @current_user.isAdmin > 0) %>
+<% if (@current_user.id == @user.id || (@current_user.isAdmin && @current_user.isAdmin > 0) %>
   <p><strong>Password</strong></br>
   <%= f.password_field :password %><br>
   <%= f.password_field :password_confirmation %>
