--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <span id="header-links">
 <% if session[:user_id] %>
   <% user = User.find(session[:user_id]) %>
-  <%= "Welcome #{user.first_name} #{user.last_name}" 
+  <%= "Welcome #{user.first_name} #{user.last_name}" %>
 <% end %> | 
 <%= link_to 'About', about_recipes_path %> | 
 <%= link_to 'Recipes', recipes_path %> | 
