--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -17,7 +17,9 @@
         <td><span class="recipe-text"><%= recipe.description %></span></td>
         <td><span class="recipe-text"><%= author_fullname(recipe.author) %></span></td>
         <td><span class="recipe-text"><%= link_to 'Edit', edit_recipe_path(recipe) %></span></td>
-        <td><span class="recipe-text"><%= link_to 'Delete', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></span></td>
+        <% if (@current_user && @current_user.is_admin?) %>
+          <td><span class="recipe-text"><%= link_to 'Delete', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></span></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
