--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <% if (@current_user.is_admin?) %>
+        <% if (@current_user && @current_user.is_admin?) %>
           <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
