--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,47 +1,55 @@
 <p id="notice"><%= notice %></p>
 <div class="recipe">
-<p>
+ <p>
   <span id="recipe-title"><%= @recipe.title %></span>
-</p>
+ </p>
 
-<p class="recipe-text">
-  <strong>Description:</strong>
-  <%= @recipe.description %>
-</p>
+ <div id="recipe-details">
+  <p class="recipe-text">
+    <strong>Description:</strong>
+    <%= @recipe.description %>
+  </p>
 
-<p class="recipe-text">
-<% if (@recipe.ingredients) %>
-<strong>Ingredients</strong><br>
-  <% @recipe.ingredients.each do |ingredient| %>
-    <%= ingredient.value %><br>
+  <p class="recipe-text">
+  <% if (@recipe.ingredients) %>
+  <strong>Ingredients</strong><br>
+    <% @recipe.ingredients.each do |ingredient| %>
+      <%= ingredient.value %><br>
+    <% end %>
   <% end %>
-<% end %>
-</p>
+  </p>
 
-<p class="recipe-text">
-<% if (@recipe.directions) %>
-<strong>Directions</strong><br>
-<ol class="recipe-text">
-  <% @recipe.directions.each do |direction| %>
-    <li><%= h("#{direction.step}") %></li>
+  <p class="recipe-text">
+  <% if (@recipe.directions) %>
+  <strong>Directions</strong><br>
+  <ol class="recipe-text">
+    <% @recipe.directions.each do |direction| %>
+      <li><%= h("#{direction.step}") %></li>
+    <% end %>
+  </ol>
   <% end %>
-</ol>
-<% end %>
-</p>
-<p class="recipe-text">
-<% if (@recipe.note) %>
-  <strong>Recipe Notes</strong><br>
-  <%= h("#{@recipe.note}") %>
-<% end %>
-</p>
+  </p>
+  <p class="recipe-text">
+  <% if (@recipe.note) %>
+    <strong>Recipe Notes</strong><br>
+    <%= h("#{@recipe.note}") %>
+  <% end %>
+  </p>
 
-<p class="recipe-text">
-  <strong>Author:</strong>
-  <%= author_fullname(@recipe.author) %>
-</p>
+  <p class="recipe-text">
+    <strong>Author:</strong>
+    <%= author_fullname(@recipe.author) %>
+  </p>
+  <div id="recipe-footer">
+   <div class="recipe-links">
+    <%= link_to 'Edit Recipe', edit_recipe_path(@recipe) %> |
+    <%= link_to 'Back to Recipes', recipes_path %>
+   </div>
+ </div>
 </div>
-<div class="recipe-links">
-<%= link_to 'Edit Recipe', edit_recipe_path(@recipe) %> |
-<%= link_to 'Back to Recipes', recipes_path %>
+
+<div id="recipe-image">
+  <%= image_tag @recipe.image.normal.url, :width => '400' %>
 </div>
+
 
